[project]
name = "nsjail-python-runner"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "flask>=3.1.1",
    "gunicorn>=23.0.0",
    "pydantic>=2.11.7",
]

[dependency-groups]
dev = [
    "ruff>=0.12.7",
]
sandbox = [
    "numpy>=2.3.2",
    "pandas>=2.3.1",
]
